--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3"
+    "@types/react-dom": "^19.2.3",
+    "@types/jest": "^29.5.3"
   }
 }
